# fastapi-mvc

./: Dockerfile  Gogolook.postman_collection.json  Makefile  README.md  docker-compose.yml  fastapi-mvc.postman_collection.json  pyproject.toml  requirements.txt
app/: main.py  test_main.py
app/db/: base.py  crud.py  database.py
app/models/: task.py
app/routers/: task.py
app/schemas/: task.py
app/services/: base.py  task.py
app/utils/: app_exceptions.py  get_list_of_app_exceptions_for_frontend.py  request_exceptions.py  service_result.py
tests/: conftest.py  test_main.py
